Add UI for human choice selection

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="main">
+      <div class="buttons">
+        <div class="choice">
+            <img id="rockImg" src="./assets/rock.jpg" alt="Rock"/>
+          <button id="rock">Rock</button>
+        </div>
+        <div class="choice">
+            <img id="paperImg" src="./assets/paper.jpeg" alt="Paper"/>
+          <button id="paper">Paper</button>
+        </div>
+        <div class="choice">
+            <img id="scissorsImg" src="./assets/scisssors.jpg" alt="Scissors"/>
+          <button id="scissors">Scissors</button>
+        </div>
+      </div>
+
+      <div class="results"></div>
+    </div>
+  </body>
 </html>
